# TMdecoder

./: .gitignore  README.md  TM.LPC.csv  TM.LPC.dump  TM.LPC.ready_tm  TM.RS41.csv  TM.RS41.dump  TM.RS41.ready_tm  TMdecoder.py  readLPCXML_2021.py  requirements.txt  txt.csv
.github/workflows/: python-tests.yml
GetTM/: GetTM.py  README.md
RatsTM/: MCBREPORT.py  RATSReport.py  RATSTCACK.py  README.md  RatsBitDefs.py  RatsScaledVars.py  RatsTM.py  TMCSV.py  __init__.py  cli.py  pyproject.toml  requirements.txt
