[project]
name = "tmdecoder"
version = "0.1.0"
description = "Decode LASP-Strateole2 Telemetry Messages and RATSReport TeleMessages."
authors = [
    { name = "LASP Strateole2 Team" }
]
requires-python = ">=3.8"
dependencies = [
    "bitstruct",
    "xmltodict"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8"
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
exclude = [".git", "__pycache__", "build", "dist", ".venv"]
